--- a/www/templates/app/states/setting.html
+++ b/www/templates/app/states/setting.html
@@ -10,15 +10,15 @@
   </ion-header-bar>
   <ion-content class="setting">
 
-      <div class="list card" style="height: 50px;">
+      <div class="list card" >
           <div class="item item-button-right">
-            <span>头像</span>
-            <button  class="button button-clear">
-              <img ng-click="changeHeader()" style="width:40px;"
-                   src=" {{ user.headpic ||'templates/app/img/200_taylor_swift_spl811605_.jpg'}}"   class="img-responsive"  />
-            </button>
+             <span style="display: inline-block"><img  style="width:46px;" src=" {{ user.headpic ||'templates/app/img/200_taylor_swift_spl811605_.jpg'}}"   class="img-responsive"  /></span>
+             <span style="display: inline-block; padding-top: -20px; ">123</span>
+             <button  class="button button-clear" style="margin-top: 16px;" ui-sref="app.setting.settingPic">
+                 <i class="icon ion-chevron-right"></i>
+             </button>
           </div>
-     </div>
+      </div>
 
     <div class="list card" >
       <div class="item item-button-right">
