本地图库选取图片完成,使用cordova插件而不是ngCordova插件完成的

--- a/www/templates/app/menu.html
+++ b/www/templates/app/menu.html
@@ -61,7 +61,7 @@
 </ion-side-menus>
 
 <!--幻灯片-->
-<script id="templates/intro.html" type="text/ng-template">
+<script id="sintro.htm" type="text/ng-template">
   <ion-view hide-nav-bar="true" hide-back-button="true">
     <ion-slide-box does-continue="true" auto-play="true" slide-interval="1000" show-pager="true" >
     <ion-slide>
