--- a/www/templates/app/states/setting.html
+++ b/www/templates/app/states/setting.html
@@ -14,7 +14,7 @@
           <div class="item item-button-right">
              <span style="display: inline-block"><img  style="width:46px;" src=" {{ user.headpic ||'templates/app/img/200_taylor_swift_spl811605_.jpg'}}"   class="img-responsive"  /></span>
              <span style="display: inline-block; padding-top: -20px; ">123</span>
-             <button  class="button button-clear" style="margin-top: 16px;" ui-sref="app.setting.settingPic">
+             <button  class="button button-clear" style="margin-top: 16px;" ui-sref="settingPic">
                  <i class="icon ion-chevron-right"></i>
              </button>
           </div>
