--- a/www/templates/app/states/settingPic.html
+++ b/www/templates/app/states/settingPic.html
@@ -1,5 +1,13 @@
-<ion-view view-title="sign in" hide-nav-bar=true  style="background: url(img/sign-in-bg.png)">
-
+<ion-view  hide-nav-bar='true' hide-back-button="true"  style="background: url(img/sign-in-bg.png)">
+    <ion-header-bar class="bar-royal" align-title="left">
+        <div class="buttons">
+            <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
+        </div>
+        <h1 class="title">设置头像</h1>
+        <div class="buttons">
+            <button class="button button-icon button-clear ion-ios-search"></button>
+        </div>
+    </ion-header-bar>
     <ion-content padding="true" class="background-inherit">
         <div class="list background-inherit" >
              hahahhahha
