--- a/www/templates/chat/message-detail.html
+++ b/www/templates/chat/message-detail.html
@@ -13,12 +13,12 @@
 
     <div ng-repeat="item in messages">
     	<p class="rj-message-time" ng-bind="item.time" ng-if="false"></p>
-        <div class="rj-message-wrap" ng-if="!item.isFromeMe">
+        <div class="rj-message-wrap" ng-if="item.from!=user.phone">
             <img ng-src="{{message.pic}}" class="rj-head-pic">
             <span class="rj-triangle-left"></span>
             <p class="rj-message" ng-bind="item.content"></p>
         </div>
-        <div class="rj-message-wrap" ng-if="item.isFromeMe">
+        <div class="rj-message-wrap" ng-if="item.from==user.phone">
             <img src="{{user.headpic}}" class="rj-head-pic-right">
             <span class="rj-triangle-right"></span>
             <p class="rj-message-right" ng-bind="item.content"></p>
