--- a/www/templates/chat/tab-message.html
+++ b/www/templates/chat/tab-message.html
@@ -12,12 +12,12 @@
     <ion-content on-swipe-left="onSwipeLeft()">
 
         <ion-list rj-close-back-drop>
-            <ion-item class="item-avatar" ng-class="{'rj-item-top': message.isTop}" on-hold="popupMessageOpthins(message)" rj-hold-active ng-repeat="message in messages | orderBy:['isTop', 'lastMessage.timeFrome1970']:true" ng-click="messageDetils(message)">
-                <img ng-src="{{message.pic}}">
-                <span class="rj-sm-red-icon" ng-show="message.showHints"><p ng-bind="message.noReadMessages"></p></span>
-                <h2 ng-bind="message.name"></h2>
-                <p class="rj-list-p" ng-bind="message.lastMessage.content"></p>
-                <span class="rj-push-right" ng-bind="message.lastMessage.time"></span>
+            <ion-item class="item-avatar" ng-class="{'rj-item-top': message.isTop}" on-hold="popupMessageOpthins(message)"  ng-repeat="chatRoom in chatRooms" ng-click="messageDetils(message)">
+                <img ng-src="{{chatRoom.headpic}}">
+                <!--<span class="rj-sm-red-icon" ng-show="message.showHints"><p ng-bind="message.noReadMessages"></p></span>-->
+                <h2 ng-bind="chatRoom.name"></h2>
+                <p class="rj-list-p" ng-bind="chatRoom.lastMessage.content"></p>
+                <span class="rj-push-right" ng-bind="chatRoom.lastMessage.createDtStr"></span>
             </ion-item>
         </ion-list>
     </ion-content>
