--- a/www/templates/app/menu.html
+++ b/www/templates/app/menu.html
@@ -12,10 +12,11 @@
         <div class="padding text-center">
           <div class="avatar">
             <img ng-click="changeHeader()" style="border-radius: 200px;width:200px;height:200px;"
-                 src=" {{ user.headpic ||'templates/app/img/200_taylor_swift_spl811605_.jpg'}}"  alt="" class="img-responsive" />
+                 src=" {{ user.headpic ||'img/wh.jpg'}}"  alt="" class="img-responsive" />
           </div>
-          <h4 class="no-margin">{{user.name}}</h4>
-          <p class="no-margin">{{user.job}}</p>
+           <strong class="no-margin">{{user.name}}</strong>
+           <strong  class="no-margin">{{user.job}}</strong>
+            <p class="no-margin">{{user.signature}}</p>
         </div>
       </div>
       <div flex class="list no-margin" style="overflow-y: scroll">
@@ -80,42 +81,26 @@
   </ion-view>
 </script>
 <script id="setting2.html" type="text/ng-template">
-  <ion-popover-view style="width: 90%;">
+  <ion-popover-view style="width: 100%; height: 430px;" >
     <ion-header-bar>
-      <h1 class="title">我的个性签名</h1>
+      <h1 class="title">我的头像</h1>
     </ion-header-bar>
     <ion-content>
-           <textarea  class="padding"  style="width:94%; height: 100px; border: 1px solid #ccc;resize: none; margin:10px;"
-                      placeholder="记录此刻心情"></textarea>
-      <button class="button button-positive" style="float: right;margin-top: 10px; margin-right: 10px;">
-        保存签名
-      </button>
-
+        <img  src="{{'img/ben.png'}}" class="img-responsive" style="width: 100%; height: auto; margin: 0 auto"/>
     </ion-content>
   </ion-popover-view>
 </script>
 
+
 <script id="templates/headpic.html" type="text/ng-template">
  <ion-modal-view>
-
-
-
   <ion-header-bar class="bar bar-header bar-positive">
     <h1 class="title">头像设置</h1>
     <button class="button button-clear button-primary" ng-click="headpic.hide()">取消</button>
   </ion-header-bar>
-
-
-
-
-
   <ion-content class="padding">
     <div class="list card" >
-      <a class="item item-avatar" href="#">
-        <img src="img/ben.png">
-        <h2 style="line-height: 40px;" > 头像预览  <i class=" icon ion-chevron-right"></i></h2>
-      </a>
-    </div>
+        <img src=" {{ user.headpic ||'templates/app/img/200_taylor_swift_spl811605_.jpg'}}" class="img-responsive" style="width: 100%; height: auto; margin: 0 auto" >
     <div class="list">
 
 
@@ -163,22 +148,27 @@
 
       <div class="list">
         <label class="item item-input">
-          <span class="input-label">用户名</span>
-          <input type="text" placeholder="{{user.name}}修改用户名">
+          <strong class="input-label">用户名</strong>
+          <input type="text" placeholder="{{user.name}}" ng-model="user.name" >
         </label>
+
+          <label class="item item-input">
+              <strong class="input-label">手机号</strong>
+              <input type="text"  placeholder="{{user.phone}}" ng-model="user.phone" >
+          </label>
       </div>
+
+
 
       <div class="list card" >
         <div class="item item-button-right">
-          <span> 编辑个性签名</span>
-          <button  class="button button-clear" ng-click="openPopover($event)">
-            <i class="icon ion-edit  "></i>
-          </button>
+          <strong> 编辑个性签名</strong>
         </div>
+          <textarea  class="padding"  style="width:94%; height: 80px; border: 1px solid #ccc;resize: none; margin:10px;" placeholder="{{user.signature}}"></textarea>
       </div>
 
       <div class="list">
-        <label class="item positive-bg "><div class="input-label light">性别</div></label>
+        <label class="item "><strong class="input-label">性别</strong></label>
         <ion-list>
           <ion-radio ng-model="choice" ng-value="'男'">男</ion-radio>
           <ion-radio ng-model="choice" ng-value="'女'">女</ion-radio>
@@ -187,26 +177,18 @@
 
       <div class="list">
         <label class="item item-input item-select">
-          <div class="input-label">
+          <strong class="input-label">
             职业类型
-          </div>
+          </strong>
           <select ng-model="user.job" convert-to-number>
             <option  ng-repeat="x in jobs">{{x}}</option>
           </select>
         </label>
       </div>
 
-      <button class="button button-full button-positive">
+      <button class="button button-full button-positive"  ng-click="changePersonalInformation()">
        保存修改
       </button>
     </ion-content>
   </ion-modal-view>
 </script>
-
-
-<!--<script id="personalInformation.html" type="text/ng-template">-->
-  <!--<ion-popover-view style="width: 90%;">-->
-      <!--HGGJGJGJGJ-->
-    <!--</ion-content>-->
-  <!--</ion-popover-view>-->
-<!--</script>-->
