--- a/www/templates/chat/message-detail.html
+++ b/www/templates/chat/message-detail.html
@@ -12,9 +12,9 @@
 <ion-content class="rj-stable-content"  id="message-detail-content">
 
     <div ng-repeat="item in messages">
-    	<p class="rj-message-time" ng-bind="item.time" ng-if="false"></p>
+    	<p class="rj-message-time" ng-bind="item.time" ng-if="item.from!=user.phone"></p>
         <div class="rj-message-wrap" ng-if="item.from!=user.phone">
-            <img ng-src="{{message.pic}}" class="rj-head-pic">
+            <img src="{{item.headPic}}" class="rj-head-pic">
             <span class="rj-triangle-left"></span>
             <p class="rj-message" ng-bind="item.content"></p>
         </div>
@@ -42,7 +42,7 @@
     </label>
     <div class="rj-footer-btn-wrap">
         <div class="buttons" ng-show="!send_content || send_content === ''">
-            <button class="button button-icon icon ion-ios-plus-outline rj-footer-btn-left">
+            <button class="button button-icon icon ion-images rj-footer-btn-left">
             </button>
         </div>
         <div class="rj-send-button" ng-hide="!send_content || send_content === ''">
