--- a/www/templates/chat/tab-message.html
+++ b/www/templates/chat/tab-message.html
@@ -12,7 +12,7 @@
     <ion-content on-swipe-left="onSwipeLeft()">
 
         <ion-list rj-close-back-drop>
-            <ion-item class="item-avatar" ng-class="{'rj-item-top': message.isTop}" on-hold="popupMessageOpthins(message)"  ng-repeat="chatRoom in chatRooms" ng-click="messageDetils(message)">
+            <ion-item class="item-avatar" ng-class="{'rj-item-top': message.isTop}" on-hold="popupMessageOpthins(message)"  ng-repeat="chatRoom in chatRooms" ng-click="showMessageDetail(chatRoom)">
                 <img ng-src="{{chatRoom.headpic}}">
                 <!--<span class="rj-sm-red-icon" ng-show="message.showHints"><p ng-bind="message.noReadMessages"></p></span>-->
                 <h2 ng-bind="chatRoom.name"></h2>
