--- a/www/templates/app/states/setting.html
+++ b/www/templates/app/states/setting.html
@@ -100,8 +100,8 @@
 
 
     <div class="list">
-      <button class="button button-full button-positive">
-           退出登录
+      <button class="button button-full button-positive" ng-click="exit()">
+           退出账号
       </button>
     </div>
 
