--- a/www/templates/chat/message-detail.html
+++ b/www/templates/chat/message-detail.html
@@ -14,7 +14,7 @@
     <div ng-repeat="item in messages">
     	<p class="rj-message-time" ng-bind="item.time" ng-if="item.from!=user.phone"></p>
         <div class="rj-message-wrap" ng-if="item.from!=user.phone">
-            <img src="{{item.headPic}}" class="rj-head-pic">
+            <img src="{{talkToStudent.headPic}}" class="rj-head-pic">
             <span class="rj-triangle-left"></span>
             <p class="rj-message" ng-bind="item.content"></p>
         </div>
