--- a/www/templates/chat/tab-friends.html
+++ b/www/templates/chat/tab-friends.html
@@ -41,7 +41,7 @@
                 <ion-list class="rj-list">
                     <ion-item ng-repeat="student in students" class="rj-item" ng-click="showMessageDetail(student)">
                         <div class="rj-contacts-pic">
-                            <img src="{{student.headpic}}">
+                            <img src="{{student.headPic}}">
                         </div>
                         <h2>{{student.name}}</h2>
                     </ion-item>
