聊天尚未完成,革命需要继

--- a/www/templates/app/menu.html
+++ b/www/templates/app/menu.html
@@ -12,7 +12,7 @@
         <div class="padding text-center">
           <div class="avatar">
             <img ng-click="changeHeader()" style="border-radius: 200px;width:200px;height:200px;"
-                 src=" {{ user.headpic ||'img/me.png'}}"  alt="" class="img-responsive" />
+                 src=" {{ user.headPic ||'img/me.png'}}"  alt="" class="img-responsive" />
           </div>
            <strong class="no-margin">{{user.name}}</strong>
            <strong  class="no-margin">{{user.job}}</strong>
@@ -89,7 +89,7 @@
   </ion-header-bar>
   <ion-content class="padding">
     <div class="list card" >
-        <img src=" {{ user.headpic ||'templates/app/img/200_taylor_swift_spl811605_.jpg'}}" class="img-responsive" style="width: 100%; height: auto; margin: 0 auto" >
+        <img src=" {{ user.headPic ||'templates/app/img/200_taylor_swift_spl811605_.jpg'}}" class="img-responsive" style="width: 100%; height: auto; margin: 0 auto" >
     <div class="list">
 
       <ul class="list text-center">
